# StudiesProjects

./: .gitignore  CMakeLists.txt  index.html  manifest.json  package-lock.json  style.css
Semestr_3/TEP/: CMakeLists.txt
Semestr_3/TEP/List_1/: Table.cpp  Table.h  solution.cpp
Semestr_3/TEP/List_2/: Number.h  main.cpp
Semestr_3/TEP/List_3/: main.cpp
Semestr_3/TEP/List_3/Interface/: Command.cpp  Interface.cpp
Semestr_3/TEP/List_3/Tree/: Node.h  Tree.cpp  Tree.h
Semestr_3/TEP/List_3/Utils/: stringUtils.h
Semestr_3/TEP/List_4/Tree/: Tree.h
Semestr_3/TEP/List_5/: MySmartPointer.h  RefCounter.cpp  RefCounter.h
Semestr_3/TEP/List_5/Tree/: Node.cpp
Semestr_3/TEP/List_5/Utils/: stringUtils.cpp
Semestr_3/TEP/List_6/: Main.cpp
Semestr_3/TEP/Miniprojekt/AGChallengePubl/: AGChallenge.sln
Semestr_3/TEP/Miniprojekt/AGChallengePubl/AGChallenge/: AGChallenge.vcxproj  Evaluator.cpp  Evaluator.h  GeneticAlgorithm.cpp  GeneticAlgorithm.h  Individual.h  NETsimulator.cpp  NETsimulator.h  Optimizer.cpp  Optimizer.h  Timer.cpp  fitness.cpp  list.h  temp.cod
Semestr_3/TEP/Miniprojekt/AGChallengePubl/data/104050/: 104050.con  104050.lfl
Semestr_3/TEP/Miniprojekt/AGChallengePubl/data/104052/: 104052.con
Semestr_3/TEP/Miniprojekt/AGChallengePubl/data/104053/: 104053.lfl
Semestr_3/TEP/Miniprojekt/AGChallengePubl/data/104054/: 104054.con  104054.lfl
Semestr_3/TEP/Miniprojekt/AGChallengePubl/data/104055/: 104055.con
Semestr_3/TEP/Miniprojekt/AGChallengePubl/data/104056/: 104056.con
Semestr_3/TEP/Miniprojekt/AGChallengePubl/data/104057/: 104057.con
Semestr_3/TEP/Miniprojekt/AGChallengePubl/data/104b00/: 104b00.lfl
Semestr_3/TEP/Miniprojekt/AGChallengePubl/data/104b01/: 104b01.lfl
Semestr_3/TEP/Miniprojekt/AGChallengePubl/data/104b02/: 104b02.lfl
Semestr_3/TEP/Miniprojekt/AGChallengePubl/data/104b03/: 104b03.lfl
Semestr_3/TEP/Miniprojekt/AGChallengePubl/data/104b05/: 104b05.con
Semestr_3/TEP/Miniprojekt/AGChallengePubl/data/104b07/: 104b07.con
Semestr_3/TEP/Miniprojekt/AGChallengePubl/data/104d00/: 104d00.con  104d00.lfl  104d00.net
Semestr_3/TEP/Miniprojekt/AGChallengePubl/data/104d02/: 104d02.net
Semestr_3/TEP/Miniprojekt/AGChallengePubl/data/104d04/: 104d04.con  104d04.net
(+1464 files in other folders)
