cmake_minimum_required(VERSION 3.26)
project(TEP)

set(CMAKE_CXX_STANDARD 17)

# List 1 executable config
#add_executable(TEP List_1/solution.cpp List_1/solution.h List_1/Table.cpp List_1/Table.h)

# List 2 executable config
#add_executable(TEP List_2/main.cpp List_2/Number.cpp List_2/Number.h)

# List 3 executable config
#add_executable(TEP List_3/main.cpp List_3/Interface/Command.cpp List_3/Interface/Command.h List_3/Interface/Interface.cpp List_3/Interface/Interface.h List_3/Tree/Tree.cpp List_3/Tree/Tree.h List_3/Tree/Node.cpp List_3/Tree/Node.h List_3/Utils/stringUtils.cpp List_3/Utils/stringUtils.h)

# List 4 executable config
#add_executable(TEP List_4/Tree/Tree.h List_4/Tree/Node.cpp List_4/Tree/Node.h List_4/Utils/stringUtils.cpp List_4/Utils/stringUtils.h)

# List 5 executable config
#add_executable(TEP List_5/MySmartPointer.h List_5/RefCounter.cpp List_5/RefCounter.h List_5/Tree/Tree.h List_5/Tree/Node.h List_5/Tree/Node.cpp List_5/Utils/stringUtils.cpp)

# List 6 executable config
add_executable(TEP List_6/MyString.cpp List_6/MyString.h List_6/Main.cpp)